[package]
name = "ethkey"
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
byteorder = "1.0"
edit-distance = "2.0"
eth-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1", rev = "db81cfea59014b4d176f10f86ed52e1a130b6822" }
ethereum-types = "0.3"
lazy_static = "1.0"
log = "0.3"
mem = { path = "../util/mem" }
parity-wordlist = "1.2"
rand = "0.4"
rust-crypto = "0.2"
rustc-hex = "1.0"
tiny-keccak = "1.3"
